[metadata]
name = pymoneypaylib
version = 0.0.3
author = Robert Karanja
author_email = karanjar990@gmail.com
description = A small library that does something cool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karanjar/pymoneypaylib
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
